authentication-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  labels:
    app: authentication-service
spec:
  type: ClusterIP
  selector:
    app: authentication-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
